--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		
+		
+		
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-hystrix</artifactId>
+    <version>1.4.7.RELEASE</version>
+</dependency>
 <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
