--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-server.port=8081
+server.servlet.context-path=/movie-info-service
 spring.application.name=movie-info-service
-api.key=d5f795429cd86c204f4766f74a8a2919
+management.endpoint.info.enabled=true
+management.endpoint.health.enabled=true
+management.endpoints.web.exposure.include=info,health
