--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=RestService
+spring.application.name=movie-info-service
 spring.profiles.active=local
 spring.cloud.config.label=master
-spring.cloud.config.uri=http://localhost:8888/
+spring.cloud.config.uri=http://localhost:8888/configuration-server/
