--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.servlet.context-path=/movie-info-service
 spring.application.name=movie-info-service
 management.endpoint.info.enabled=true
 management.endpoint.health.enabled=true
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=info,health
